@@ -1,3 +1,8 @@
+2013-10-08  Jan Beulich <jbeulich@suse.com>
+
+	* gas/arm/thumb-w-good.s: Add PUSH.W and POP.W tests.
+	* gas/arm/thumb-w-good.d: Update accordingly.
+
 2013-10-08  Nick Clifton  <nickc@redhat.com>
 
 	* gas/msp430/bad.s: New test: Checks erroneous size extensions.
